Fix media queries overlap.

--- a/public/style.css
+++ b/public/style.css
@@ -152,7 +152,7 @@ main {
 }
 
 /* Large screens */
-@media only screen and (min-width: 600px) {
+@media only screen and not (max-width: 600px) {
   .navbar {
     top: 0;
     width: 5rem;
